--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,45 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="org.mlmunozd.app.MessageDeliverySystem">
 
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="com.example.app.permission.MAPS_RECEIVE" />
-    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.BODY_SENSORS" />
+    <uses-permission android:name="com.samsung.permission.SSENSOR_HRM_RAW_PPG" />
+    <uses-permission android:name="com.samsung.android.providers.context.permission.WRITE_USE_APP_FEATURE_SURVEY" />
+    <uses-feature android:name="android.hardware.wifi" />
+    <uses-feature android:name="android.permission.ACCESS_WIFI_STATE." />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
     <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
     <uses-permission android:name="android.permission.READ_CALENDAR" />
-    <uses-permission android:name="android.permission.WRITE_CALENDAR"/>
+    <uses-permission android:name="android.permission.WRITE_CALENDAR" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
-    <uses-permission android:name="android.permission.SEND_SMS"/>
-    <uses-permission android:name="android.permission.RECEIVE_SMS"/>
-    <uses-permission android:name="android.permission.READ_SMS"/>
-    <uses-permission android:name="android.permission.RECEIVE_WAP_PUSH"/>
-    <uses-permission android:name="android.permission.RECEIVE_MMS"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.SEND_SMS" />
+    <uses-permission android:name="android.permission.RECEIVE_SMS" />
+    <uses-permission android:name="android.permission.READ_SMS" />
+    <uses-permission android:name="android.permission.RECEIVE_WAP_PUSH" />
+    <uses-permission android:name="android.permission.RECEIVE_MMS" />
 
     <uses-feature
         android:glEsVersion="0x00020000"
         android:required="true" />
 
     <application
-        android:name="org.mlmunozd.app.MessageDeliverySystem.Persistence.DBManager"
+        android:name=".Persistence.DBManager"
         android:allowBackup="true"
         android:icon="@mipmap/applogo"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning"
+        tools:replace="android:icon, android:theme">
+
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
 
         <uses-library android:name="com.google.android.maps" />
 
-        <activity android:name="org.mlmunozd.app.MessageDeliverySystem.MainActivity">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -47,17 +54,25 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="org.mlmunozd.app.MessageDeliverySystem.Logic.Login"
-            android:parentActivityName="org.mlmunozd.app.MessageDeliverySystem.Logic.Intro" />
+            android:name=".Logic.Login"
+            android:parentActivityName=".Logic.Intro" />
         <activity
-            android:name="org.mlmunozd.app.MessageDeliverySystem.Logic.Register"
-            android:parentActivityName="org.mlmunozd.app.MessageDeliverySystem.MainActivity" />
-        <activity android:name="org.mlmunozd.app.MessageDeliverySystem.Logic.Intro" />
+            android:name=".Logic.Register"
+            android:parentActivityName=".MainActivity" />
+        <activity android:name=".Logic.Intro" />
         <activity
-            android:name="org.mlmunozd.app.MessageDeliverySystem.Logic.Account"
+            android:name=".Logic.Account"
             android:label="@string/title_activity_account"
-            android:parentActivityName="org.mlmunozd.app.MessageDeliverySystem.MainActivity"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+
+
+        <service
+            android:name=".Service.MyFirebaseMessagingService">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+            </intent-filter>
+        </service>
 
     </application>
 
