--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'com.android.application'
-apply plugin: 'com.google.gms.google-services'
 android {
     useLibrary 'org.apache.http.legacy'
     compileSdkVersion 27
@@ -28,6 +27,8 @@ android {
     buildToolsVersion '28.0.3'
 }
 
+apply plugin: 'com.google.gms.google-services'
+
 def dbflow_version = "4.2.4"
 
 dependencies {
@@ -50,11 +51,14 @@ dependencies {
     testImplementation  'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation 'com.google.firebase:firebase-core:16.0.1'
+    implementation 'com.google.firebase:firebase-core:16.0.9'
     implementation "com.google.android.gms:play-services-analytics:16.0.8"
     implementation "com.google.android.gms:play-services-gcm:16.1.0"
-    implementation 'com.google.firebase:firebase-messaging:17.6.0'
+    implementation 'com.google.firebase:firebase-messaging:18.0.0'
+    //implementation 'com.google.firebase:firebase-admin:6.8.0'
+    implementation group: 'org.mindrot', name: 'jbcrypt', version: '0.4'
 
     implementation group: 'com.android.volley', name: 'volley', version: '1.1.1'
+    implementation 'com.jonathanfinerty.once:once:1.2.2'
 }
 
