--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,8 @@
     <uses-permission android:name="android.permission.READ_SMS" />
     <uses-permission android:name="android.permission.RECEIVE_WAP_PUSH" />
     <uses-permission android:name="android.permission.RECEIVE_MMS" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
     <uses-feature
         android:glEsVersion="0x00020000"
@@ -46,33 +48,52 @@
 
         <uses-library android:name="com.google.android.maps" />
 
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".Logic.Intro"
+            android:screenOrientation="portrait"
+            android:parentActivityName="MainActivity" />
+
         <activity
             android:name=".Logic.Login"
+            android:screenOrientation="portrait"
             android:parentActivityName=".Logic.Intro" />
         <activity
             android:name=".Logic.Register"
+            android:screenOrientation="portrait"
             android:parentActivityName=".MainActivity" />
-        <activity android:name=".Logic.Intro" />
+
         <activity
             android:name=".Logic.Account"
             android:label="@string/title_activity_account"
+            android:screenOrientation="portrait"
             android:parentActivityName=".MainActivity"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/AppTheme.NoActionBar"/>
 
 
         <service
-            android:name=".Services.MyFirebaseMessagingService">
+            android:name=".Logic.MyFirebaseMessagingService">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT"/>
             </intent-filter>
         </service>
+
+        <receiver
+            android:name=".Fragments.MensajesFragment"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.parse.push.intent.RECEIVE" />
+            </intent-filter>
+        </receiver>
+
 
     </application>
 
