--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,6 @@
     <uses-permission android:name="android.permission.RECEIVE_WAP_PUSH" />
     <uses-permission android:name="android.permission.RECEIVE_MMS" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
     <uses-feature
         android:glEsVersion="0x00020000"
@@ -43,6 +42,26 @@
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning"
         tools:replace="android:icon, android:theme">
+
+        <receiver
+            android:name=".Logic.EnviadoMensajeReceiver"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="ACTION_SENDING_SMS_STATUS" />
+            </intent-filter>
+        </receiver>
+
+        <receiver
+            android:name=".Logic.EntregadoMensajeReceiver"
+            android:enabled="true"
+            android:exported="true" >
+
+            <intent-filter>
+                <action android:name="ACTION_DELIVERY_SMS_STATUS" />
+            </intent-filter>
+
+        </receiver>
 
         <meta-data
             android:name="preloaded_fonts"
@@ -59,7 +78,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".Logic.Intro"
             android:parentActivityName=".MainActivity"
@@ -84,7 +102,6 @@
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
-
         <service android:name=".Services.MensajeService">
             <intent-filter>
                 <action android:name="ACTION_OPEN_SERVICE" />
